# caie

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  app.py
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  api.ts  index.css  types.ts
client/src/components/: ComparisonPage.tsx  ComparisonTable.tsx  DataTable.tsx  DocumentInfo.tsx  ExtractPage.tsx  Layout.tsx  MarkdownViewer.tsx  PageGrid.tsx  ProgressCard.tsx  SettingsPage.tsx  UploadForm.tsx  UploadList.tsx  WorkspaceSelector.tsx
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useSSE.ts  useUploads.ts
client/src/pages/: LoginPage.tsx  RegisterPage.tsx  WorkspaceSettingsPage.tsx
ec2/: README.md  nginx.conf  setup.sh  start-llm.sh  start.sh  status.sh  stop-llm.sh  stop.sh
pricelist/: dspy_cleanup.py  llm_client.py  pipeline.py
pricelist/optimized/: schneider.json
runpod/: start_lightonocr.sh
server/: .dockerignore  .env.example  Dockerfile  app.py  auth.py  config.py  db.py  docker-compose.yml  entrypoint.sh  extensions.py  models.py  pyproject.toml  requirements.txt  storage.py
server/migrations/versions/: 0983855bb402_initial_migration.py
server/pricelist/: export.py  ocr_client.py  parse_client.py  parser.py  pipeline.py  schemas.py
server/pricelist/samples/: schneider.json
server/routes/: __init__.py  auth.py  compare.py  extract.py  pages.py  uploads.py  workspaces.py
server/tasks/: ocr.py  parse.py
server/utils/: tables.py
templates/: index.html
